[package]
name = "anachan"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "anachan"
path = "src/bin/shuttle-bin.rs"

[[bin]]
name = "standalone"
path = "src/bin/standalone-bin.rs"

[dependencies]
axum = { version = "0.6.20", features = ["headers", "macros"] }
chrono = { version = "0.4.31", features = ["clock", "serde"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
shuttle-axum = "0.34.0"
shuttle-metadata = "0.34.0"
shuttle-runtime = "0.34.0"
shuttle-shared-db = { version = "0.34.0", features = ["postgres"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
tera = "1.19.1"
tokio = "1.28.2"
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = "0.1.40"
url = { version = "2.4.1", features = ["serde"] }
